--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+dist: trusty
 language: cpp
 os:
     - linux
@@ -8,18 +9,31 @@ compiler:
     - gcc
     
 before_install:
+    - cmake --version
     - if [[ $TRAVIS_OS_NAME == linux && `cmake --version | awk -F' ' '{print $3}'` < '3.2.2' ]]; then chmod +x ./scripts/before_install_ubuntu.sh && ./scripts/before_install_ubuntu.sh; fi
 install:
     - if [ "$CXX = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi 
-addons:
+addons: &addons
     apt:
-        sources:
+        sources: &sources
             - ubuntu-toolchain-r-test
+            - ubuntu-sdk-team
         packages:
             - gcc-5
             - g++-5
-            
+            - libstdc++-5-dev
 before_script:
+    - |
+        case "$CXX" in #(
+        g++*) CXX=g++-5 #(
+        ;;
+        esac
+    - |
+        case "$CC" in #(
+        gcc*) CC=gcc-5 #(
+        ;;
+        esac
+    - export CXX CC
     - mkdir -p build && cd build && cmake .. 
 script:
     - make -j8 
