--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
+# use ubuntu-14.4
 sudo: required
 dist: trusty
+
 language: cpp
 os:
     - linux
@@ -9,7 +11,6 @@ compiler:
     - gcc
     
 before_install:
-    - gcc --version
     - cmake --version
     - if [[ $TRAVIS_OS_NAME == linux && `cmake --version | awk -F' ' '{print $3}'` < '3.2.2' ]]; then chmod +x ./scripts/before_install_ubuntu.sh && ./scripts/before_install_ubuntu.sh; fi
 
