--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,12 @@ before_script:
             esac
         fi
     - |
-        case "$CC" in #(
-        gcc*) CC=gcc-5 #(
-        ;;
-        esac
+        if [ $TRAVIS_OS_NAME = linux ]; then
+            case "$CC" in #(
+                gcc*) CC=gcc-5
+                ;;
+            esac
+        fi
     - if [ $TRAVIS_OS_NAME = linux ]; then export CXX CC; fi
     - mkdir -p build && cd build && $CXX --version && cmake --version && cmake .. 
 script:
