--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ compiler:
     
 before_install:
     - cmake --version
+    - apt-get remove gcc # 卸载旧版本
     - if [[ $TRAVIS_OS_NAME == linux && `cmake --version | awk -F' ' '{print $3}'` < '3.2.2' ]]; then chmod +x ./scripts/before_install_ubuntu.sh && ./scripts/before_install_ubuntu.sh; fi
 
 addons: &addons
@@ -21,7 +22,6 @@ addons: &addons
             - ubuntu-sdk-team
         packages:
             - cmake
-            - gcc-5
             - g++-5
             - libstdc++-5-dev
 before_script:
@@ -40,8 +40,8 @@ before_script:
             # esac
         # fi
     # - if [ $TRAVIS_OS_NAME = linux ]; then export CXX CC; fi
-    - $CXX --version && $CC --version
-    - mkdir -p build && cd build && $CXX --version && cmake --version && cmake .. 
+    - $CXX --version && $CC --version && cmake --version
+    - mkdir -p build && cd build && cmake .. 
 script:
     - make -j8 
     - ./r-value_reference/r-value_reference
