--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ compiler:
     
 before_install:
     - cmake --version
-    - apt-get remove gcc # 卸载旧版本
+    - sudo apt-get remove gcc # 卸载旧版本
     - if [[ $TRAVIS_OS_NAME == linux && `cmake --version | awk -F' ' '{print $3}'` < '3.2.2' ]]; then chmod +x ./scripts/before_install_ubuntu.sh && ./scripts/before_install_ubuntu.sh; fi
 
 addons: &addons
