--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
     - cmake --version
     - |
         if [ $TRAVIS_OS_NAME = linux ]; then
-            sudo apt-get remove gcc # 卸载旧版本
+            sudo apt-get remove -y gcc # 卸载旧版本
             if [[ `cmake --version | awk -F' ' '{print $3}'` < '3.2.2' ]]; then chmod +x ./scripts/before_install_ubuntu.sh && ./scripts/before_install_ubuntu.sh; fi
         fi
 
