信号量及其测试

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,6 @@ if(UNIX)
 	add_definitions(-std=c++11)
 endif()
 include_directories(include)
+add_subdirectory(src)
+add_subdirectory(test)
 add_subdirectory(r-value_reference)
