--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,6 @@
 
 add_executable(test_semaphore test_semaphore.cpp)
 target_link_libraries(test_semaphore cpp)
+if(UNIX)
+target_link_libraries(test_semaphore pthread)
+endif()
